@@ -46,6 +46,9 @@ static  GtkWidget *spectator_entry;
 static  GtkWidget *rcon_entry;
 static  GtkWidget *customcfg_combo;
 
+/*pulp*/
+static  GtkWidget *spinner;
+static  GtkAdjustment *adj;
 
 static GSList *props_list = NULL;
 
@@ -57,7 +60,7 @@ static void props_free (struct server_props *p) {
     if (p->server_password) g_free (p->server_password);
     if (p->spectator_password) g_free (p->spectator_password);
     if (p->rcon_password) g_free (p->rcon_password);
-
+    if (p->slots_free) g_free (p->slots_free);
     host_unref (p->host);
     g_free (p);
   }
@@ -107,6 +110,7 @@ struct server_props *properties_new (struct host *host, unsigned short port) {
   p->server_password = NULL;
   p->spectator_password = NULL;
   p->rcon_password = NULL;
+  p->slots_free =NULL;
 
   props_list = g_slist_append (props_list, p);
 
@@ -138,8 +142,7 @@ void props_save (void) {
   for (list = props_list; list; list = list->next) {
     p = (struct server_props *) list->data;
 
-    if (p->custom_cfg || p->server_password || p->spectator_password ||
-                                                           p->rcon_password) {
+    if (p->custom_cfg || p->server_password || p->spectator_password || p->rcon_password || p->slots_free) {
       fprintf (f, "[%s:%d]\n", inet_ntoa (p->host->ip), p->port);
 
       if (p->custom_cfg)
@@ -150,6 +153,8 @@ void props_save (void) {
 	fprintf (f, "spectator_password %s\n", p->spectator_password);
       if (p->rcon_password)
 	fprintf (f, "rcon_password %s\n", p->rcon_password);
+      if (p->slots_free)
+      fprintf (f, "slots_free %s\n", p->slots_free);
 
       fprintf (f, "\n");
     }
@@ -192,7 +197,7 @@ void props_load (void) {
       if (!ptr)
 	continue;
       *ptr = '\0';
-    
+
       if (!parse_address (&buf[1], &addr, &port))
 	continue;
 
@@ -236,6 +241,10 @@ void props_load (void) {
 	if (p->rcon_password) g_free (p->rcon_password);
 	p->rcon_password = strdup_strip (ptr);
       }
+      else if (strcmp (buf, "slots_free") == 0) {
+	if (p->slots_free) g_free (p->slots_free);
+	p->slots_free = strdup_strip (ptr);
+      }
     }
   }
 
@@ -249,18 +258,41 @@ static void set_new_properties (GtkWidget *widget, struct server *s) {
   char *srvpwd;
   char *spectpwd;
   char *rconpwd;
+  char *sfree; /*pulp*/
+  char *sfree2;
 
-  customcfg = strdup_strip (
-        gtk_entry_get_text (GTK_ENTRY (GTK_COMBO (customcfg_combo)->entry)));
+  char slot_buffer[2];
+
+  customcfg = strdup_strip ( gtk_entry_get_text (GTK_ENTRY (GTK_COMBO (customcfg_combo)->entry)));
 
   srvpwd = strdup_strip (gtk_entry_get_text (GTK_ENTRY (password_entry)));
   spectpwd = strdup_strip (gtk_entry_get_text (GTK_ENTRY (spectator_entry)));
   rconpwd = strdup_strip (gtk_entry_get_text (GTK_ENTRY (rcon_entry)));
+	
+  /*pulp*/
+  slot_buffer[0]=gtk_spin_button_get_value_as_int (GTK_SPIN_BUTTON (spinner))+48;
+  slot_buffer[1]='\0';
 
+  if (slot_buffer[0]==48){
+      sfree2=NULL;
+  }
+
+  else {
+
+  sfree2=&slot_buffer[0];
+
+  }
+
+
+  sfree = strdup_strip (sfree2);
+  
+
+
+  
   props = properties (s);
 
   if (props) {
-    if (customcfg || srvpwd || spectpwd || rconpwd) {
+    if (customcfg || srvpwd || spectpwd || rconpwd || sfree) {
       if (props->custom_cfg) g_free (props->custom_cfg);
       props->custom_cfg = customcfg;
 
@@ -272,6 +304,9 @@ static void set_new_properties (GtkWidget *widget, struct server *s) {
 
       if (props->rcon_password) g_free (props->rcon_password);
       props->rcon_password = rconpwd;
+      
+      if (props->slots_free) g_free (props->slots_free);
+      props->slots_free = sfree;
     }
     else {
       props_list = g_slist_remove (props_list, props);
@@ -279,12 +314,13 @@ static void set_new_properties (GtkWidget *widget, struct server *s) {
     }
   }
   else {
-    if (customcfg || srvpwd || spectpwd || rconpwd) {
+    if (customcfg || srvpwd || spectpwd || rconpwd || sfree) {
       props = properties_new (s->host, s->port);
       props->custom_cfg = customcfg;
       props->server_password = srvpwd;
       props->spectator_password = spectpwd;
       props->rcon_password = rconpwd;
+      props->slots_free=sfree;
     }
   }
 
@@ -301,12 +337,15 @@ static GtkWidget *server_info_page (struct server *s) {
   GtkWidget *label;
   GSList *sources;
   GSList *list;
+
   struct master *m;
   struct server_props *props;
   char buf[32];
   GList *cfgs;
   char *time_str;
   char *tmp;
+  char buffer[2]; /*pulp*/
+  int slots;
 
   props = properties (s);
 
@@ -315,7 +354,7 @@ static GtkWidget *server_info_page (struct server *s) {
 
   /* Address */
 
-  table = gtk_table_new (3, 4, FALSE);
+  table = gtk_table_new (4, 4, FALSE);
   gtk_table_set_row_spacings (GTK_TABLE (table), 4);
   gtk_table_set_col_spacings (GTK_TABLE (table), 8);
   gtk_box_pack_start (GTK_BOX (page_vbox), table, FALSE, FALSE, 0);
@@ -373,6 +412,39 @@ static GtkWidget *server_info_page (struct server *s) {
     gtk_table_attach_defaults (GTK_TABLE (table), label, 1, 4, 2, 3);
     gtk_widget_show (label);
   }
+
+  
+  /*pulp*/ /*Reserved Slots spin widget*/
+
+  label = gtk_label_new (_("Reserved Slots:"));
+  gtk_misc_set_alignment (GTK_MISC (label), 0.0, 0.5);
+  gtk_table_attach_defaults (GTK_TABLE (table), label, 0, 1, 3, 4);
+  gtk_widget_show (label);
+
+  if (props)  {
+
+  	if (props->slots_free)	{
+		strcpy(buffer,props->slots_free);
+		slots=((int) buffer[0])-48;
+	}
+
+	else{
+	  slots=0;
+	}
+  }
+
+  else  {
+  	slots=0;
+  }
+
+  adj = (GtkAdjustment *) gtk_adjustment_new (slots, 0, 9, 1, 2,0);
+  spinner = gtk_spin_button_new (adj, 0, 0);
+  gtk_spin_button_set_numeric (GTK_SPIN_BUTTON (spinner), TRUE);
+  gtk_spin_button_set_update_policy(GTK_SPIN_BUTTON (spinner), GTK_UPDATE_IF_VALID);
+  gtk_table_attach_defaults (GTK_TABLE (table), spinner, 1, 2, 3, 4);
+  gtk_widget_show (spinner);
+
+
 
   gtk_widget_show (table);
 
@@ -479,8 +551,7 @@ static GtkWidget *server_passwords_page (struct server *s) {
   gtk_table_set_col_spacings (GTK_TABLE (table), 8);
   gtk_box_pack_start (GTK_BOX (page_vbox), table, FALSE, FALSE, 0);
 
-  password_entry = passwd_entry (_("Server Password"),
-				 (props)? props->server_password : NULL,
+  password_entry = passwd_entry (_("Server Password"), (props)? props->server_password : NULL,
 				 table, 0);
 
   if ((games[s->type].flags & GAME_PASSWORD) == 0)
